samples/_failures_safe/1761074955_800bd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1261070f.c: In function ‘rotation_matrix_x’:
./samples/SAFE/__tmp_1261070f.c:129:5: error: expected expression at end of input
  129 |     rot.elements[2][0] = 0.0; rot.elements[2][
      |     ^~~
./samples/SAFE/__tmp_1261070f.c:129:5: error: expected declaration or statement at end of input
